tests/invalid_purity/impure_par_conj.err_exp
impure_par_conj.m:022: Purity error: parallel conjunct is impure, but parallel
impure_par_conj.m:022:   conjuncts must be pure or semipure.
impure_par_conj.m:026: Purity error: parallel conjunct is impure, but parallel
impure_par_conj.m:026:   conjuncts must be pure or semipure.
